[gd_scene load_steps=2 format=3 uid="uid://debug_panel_scene"]

[ext_resource type="Script" path="res://scripts/ui/DebugPanel.gd" id="1"]

[node name="DebugPanel" type="PanelContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 300.0
grow_horizontal = 0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DEBUG CONTROLS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ChkShowAll" type="CheckButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Show All"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DebugCategoryLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Debug Categories:"
theme_override_font_sizes/font_size = 12

[node name="ChkForgeDebug" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Forge Debug"

[node name="ChkDungeonDebug" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Dungeon Debug"

[node name="ChkMinigameDebug" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Minigame Debug"

[node name="ChkCombatDebug" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Combat Debug"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioCategoryLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio Contexts:"
theme_override_font_sizes/font_size = 12

[node name="ChkForgeAudio" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Forge Audio"

[node name="ChkDungeonAudio" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Dungeon Audio"
